CREATE TABLE "authors" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "primary_name" text NOT NULL,
  "bio" text
);

CREATE TABLE "author_names" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "author_id" integer NOT NULL,
  "alt_name" text
);

CREATE TABLE "works" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "title" text NOT NULL,
  "publisher" text,
  "isbn" bigint UNIQUE,
  "description" text,
  "cover_url" text
);

CREATE TABLE "copies" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "work_id" integer NOT NULL,
  "location_id" integer NOT NULL,
  "owner_id" integer,
  "condition" varchar(50),
  "acquired" timestamp with time zone NOT NULL,
  "lended_to" integer
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "name" text UNIQUE NOT NULL,
  "info" text,
  "join_date" timestamp NOT NULL
);

CREATE TABLE "tags" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "parent_id" integer,
  "type" varchar(50) NOT NULL,
  "label" text NOT NULL,
  "description" text
);

CREATE TABLE "locations" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "parent_id" integer,
  "name" text NOT NULL,
  "description" text,
  "type" varchar(50) NOT NULL
);

CREATE TABLE "works_authors" (
  "works_id" integer,
  "authors_id" integer,
  PRIMARY KEY ("works_id", "authors_id")
);

ALTER TABLE "works_authors" ADD FOREIGN KEY ("works_id") REFERENCES "works" ("id");

ALTER TABLE "works_authors" ADD FOREIGN KEY ("authors_id") REFERENCES "authors" ("id");


CREATE TABLE "works_tags" (
  "works_id" integer,
  "tags_id" integer,
  PRIMARY KEY ("works_id", "tags_id")
);

ALTER TABLE "works_tags" ADD FOREIGN KEY ("works_id") REFERENCES "works" ("id");

ALTER TABLE "works_tags" ADD FOREIGN KEY ("tags_id") REFERENCES "tags" ("id");


ALTER TABLE "copies" ADD FOREIGN KEY ("location_id") REFERENCES "locations" ("id");

ALTER TABLE "locations" ADD FOREIGN KEY ("parent_id") REFERENCES "locations" ("id");

ALTER TABLE "copies" ADD FOREIGN KEY ("work_id") REFERENCES "works" ("id");

ALTER TABLE "copies" ADD FOREIGN KEY ("owner_id") REFERENCES "users" ("id");

ALTER TABLE "author_names" ADD FOREIGN KEY ("author_id") REFERENCES "authors" ("id");

ALTER TABLE "tags" ADD FOREIGN KEY ("parent_id") REFERENCES "tags" ("id");

ALTER TABLE "copies" ADD FOREIGN KEY ("lended_to") REFERENCES "users" ("id");
